package saxion.facade;

public record StandardFDMDTO() {
}
