package types;

public enum FilamentType {
    PLA, PETG, ABS
}
